# sift

./: .gitignore  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  build.sh  config.toml.example  pyproject.toml
.claude/agents/: diva-engineer.md  general-user.md  paper-manager-pm.md  paper-scout.md  qa-reviewer.md  web-designer.md
Resources/: Info.plist
Sources/SiftApp/: SiftApp.swift
Sources/SiftApp/Models/: Paper.swift
Sources/SiftApp/Services/: Config.swift  IngestService.swift  LLMTagger.swift  LibraryStore.swift
Sources/SiftApp/Views/: ConsolidateAuthorsSheet.swift  ConsolidateTagsSheet.swift  ContentView.swift  FolderManagementSheet.swift  MergeProposalRow.swift  PaperDetail.swift  PaperList.swift  RootView.swift  SettingsView.swift  Sidebar.swift  WelcomeView.swift
docs/: index.html  style.css
macapp/: Package.swift  README.md  build.sh
macapp/Resources/: AppIcon.icns  Info.plist
macapp/Sources/PaperManagerApp/: PaperManagerApp.swift
prompts/: keshav-three-pass.md
src/paper_manager/: app.py  cache.py  claude.py  cli.py  code_links.py  config.py  db.py  discover.py  embed.py  export_site.py  fetch_url.py  figures.py  ingest.py  library.py  pdf.py  prefs.py  recs.py  search.py  storage.py
src/paper_manager/migrate/: zotero.py
src/paper_manager/routes/: discover.py  home.py  ingest.py  library.py  manage.py  paper.py  papers.py  settings.py
src/paper_manager/static/: app.css  app.js  site.css
src/paper_manager/templates/: _card_rate.html  _manage_row.html  base.html  home.html  library.html  manage.html  paper.html  papers.html  (+3 more)
(+19 files in other folders)
