[project]
name = "paper-manager"
version = "0.1.0"
description = "Personal paper library with Claude-powered summaries, search, and recommendations."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pypdf>=5.0",
    "pdfminer.six>=20240706",
    "PyMuPDF>=1.24",
    "pydantic>=2.9",
    "numpy>=1.26",
    "typer>=0.13",
    "rich>=13.9",
    "httpx>=0.27",
    "markdown>=3.6",
    "readability-lxml>=0.8.1",
    "lxml[html_clean]>=5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
paper = "paper_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_manager"]
